Fixed hobies on smaller screens

--- a/style.css
+++ b/style.css
@@ -125,4 +125,8 @@ main {
     #edu h3 {
         margin-top: 0px;
     }
+
+    #flex-container {
+        display: flow
+    }
 }
